[project]
name = "lm"
version = "0.0.1"
description = "Language modeling for the shell"
readme = {file = "readme.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["llm", "cli", "large", "language", "model", "command-line"]
authors = [
    {name = "Oskar Lundin", email = "oskar.lundin@pm.me"}
]
dependencies = [
    "wheel",
    "packaging",
    "torch",
    "transformers",
    "accelerate",
    "outlines",
    "flash-attn --no-build-isolation",
    #"llama-cpp-python",
    #"openai",
]
optional-dependencies = {dev = ["mypy", "ruff"]}

requires-python = ">=3.8"

[project.urls]
repository = "https://github.com/fumlig/lm"
issues = "https://github.com/fumlig/lm/issues"

[project.scripts]
lm = "lm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[tool.hatch.envs.default]
python = "3.10"
